# m5stack-weather

./: .gitignore  Caddyfile  docker-compose.yaml
m5/: m5stack_micropython.py  temperature_test.py
mqtt/mqtt_dummy_publisher/: flake.nix  pyproject.toml
mqtt/mqtt_dummy_publisher/src/: mqtt_dummy_publisher.py
mqtt/mqtt_to_redis/: flake.nix  pyproject.toml
mqtt/mqtt_to_redis/src/: mqtt_to_redis.py
webserver/: flake.nix  pyproject.toml
webserver/src/: app.py  redis_client.py  weather_calc.py
webserver/src/static/: main.css  pressure-sealevel-kelvin.mml  pressure-sealevel.mml  zambretti-falling.mml  zambretti-rising.mml  zambretti-steady.mml
webserver/src/templates/: index.html  info.html  root.html  weather.html
