[tool.poetry]
name = "cot-projekt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
paho-mqtt = "^2.0.0"
redis = "^5.0.2"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
gunicorn = "*"

[tool.poetry.scripts]
webserver = 'src.app:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
